# sigdiff

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  lefthook.yml
crates/sigdiff-core/: Cargo.toml
crates/sigdiff-core/src/: cache.rs  diff.rs  filter.rs  git.rs  lib.rs  provider.rs  refs.rs  signature.rs
crates/sigdiff-core/src/render/: json.rs  text.rs
crates/sigdiff-lang-go/: Cargo.toml
crates/sigdiff-lang-go/src/: lib.rs
crates/sigdiff-lang-java/: Cargo.toml
crates/sigdiff-lang-java/src/: lib.rs
crates/sigdiff-lang-python/: Cargo.toml
crates/sigdiff-lang-python/src/: lib.rs
crates/sigdiff-lang-rust/: Cargo.toml
crates/sigdiff-lang-rust/src/: lib.rs
crates/sigdiff-lang-ts/: Cargo.toml
crates/sigdiff-lang-ts/src/: lib.rs
src/: main.rs
tests/: integration.rs
