[package]
name = "sigdiff-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for sigdiff: signature extraction, diffing, filtering, and rendering"

[dependencies]
tree-sitter.workspace = true
tree-sitter-tags.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ignore = "0.4"
bincode = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
