[package]
name = "sigdiff-lang-java"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Java language provider for sigdiff"

[dependencies]
sigdiff-core.workspace = true
tree-sitter.workspace = true
tree-sitter-tags.workspace = true
tree-sitter-java = "0.23"

[lints]
workspace = true
