[package]
name = "sigdiff-lang-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Python language provider for sigdiff"

[dependencies]
sigdiff-core.workspace = true
tree-sitter.workspace = true
tree-sitter-tags.workspace = true
tree-sitter-python = "0.25"

[lints]
workspace = true
