[package]
name = "sigdiff-lang-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust language provider for sigdiff"

[dependencies]
sigdiff-core.workspace = true
tree-sitter.workspace = true
tree-sitter-tags.workspace = true
tree-sitter-rust = "0.24"

[lints]
workspace = true
