[package]
name = "sigdiff-lang-ts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "TypeScript/JavaScript language provider for sigdiff"

[dependencies]
sigdiff-core.workspace = true
tree-sitter.workspace = true
tree-sitter-tags.workspace = true
tree-sitter-typescript = "0.23"

[lints]
workspace = true
